--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,27 +1,23 @@
 /*
     The following CSS code is the style of the register page.
- */
+*/
+
 .register-background-div {
     margin: 0 auto;
     display: flex;
-    /* vertical arrange the element inside the box */
     flex-direction: column;
     align-items: center;
 }
 
-/* set all sub-divs (such as user-type, phone, password, submit) as flex containers */
 .register-background-div > div {
     display: flex;
-    /* horizontal arrange the element inside the box */
     flex-direction: row;
     align-items: center;
     width: 100%;
     justify-content: center;
-    /* uniform margin */
     margin-bottom: 20px;
 }
 
-/* set the uniform width of label, input and button */
 .register-background-div label,
 .register-background-div input,
 .register-background-div button {
@@ -30,7 +26,6 @@
     margin-right: 10px;
 }
 
-/* set the same style of input and button */
 .phone input,
 .password input {
     margin: 10px;
@@ -38,13 +33,13 @@
     width: 250px;
     font-size: 20px;
     border-radius: 10px;
-    background: linear-gradient(to right, #f2f2f2, #e6e6e6);
-    border: black 2px solid;
+    background: linear-gradient(to right, var(--input-gradient-start), var(--input-gradient-end));
+    border: 2px solid var(--input-border-color);
 }
 
 .register-background-div .submit button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--submit-button-bg-start);
+    color: var(--button-text-color);
     border: none;
     border-radius: 10px;
     padding: 15px 30px;
@@ -52,13 +47,12 @@
     text-align: center;
     margin-left: 10px;
     margin-top: 20px;
-    /* set the background color of the button */
-    background: linear-gradient(to right, #007bff, #0056b3);
+    background: linear-gradient(to right, var(--submit-button-bg-start), var(--submit-button-bg-end));
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .register-background-div .submit button:hover {
-    background-color: white;
-    color: #007bff;
+    background-color: var(--submit-button-hover-bg-color);
+    color: var(--submit-button-hover-text-color);
     font-style: italic;
 }
