--- a/static/css/base_personInfo.css
+++ b/static/css/base_personInfo.css
@@ -1,17 +1,15 @@
 /*
-    This file contains the basic style of the personInfo page of the website
- */
+    This file contains the basic style of the personalInfo page of the website
+*/
+
 .nav-bar {
     display: flex;
     align-items: center;
-    /* make each element in side nav-bar take up the same space */
     flex-direction: row;
-    /* Added transition for smooth changes */
     transition: all 0.3s ease-in-out;
 }
 
-.main{
-    /* set the display mode to flex */
+.main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,8 +17,8 @@
 }
 
 .nav-bar button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--nav-button-bg-color);
+    color: var(--nav-button-text-color);
     border: none;
     border-radius: 15px;
     padding: 1rem 2rem;
@@ -28,19 +26,17 @@
     font-size: 1.1rem;
     text-align: center;
     margin: 1rem 1rem 2rem;
-    /* Added transition for smooth hover effect */
     transition: all 0.3s ease-in-out;
 }
 
 .nav-bar button:hover {
-    background-color: white;
-    color: #007bff;
+    background-color: var(--nav-button-hover-bg-color);
+    color: var(--nav-button-hover-text-color);
     font-style: italic;
 }
 
 .back-button-box button {
     margin-top: 20px;
-    /* set round corner for the button */
     border-radius: 15px;
 }
 
@@ -57,22 +53,20 @@
 }
 
 .container button {
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--nav-button-bg-color);
+    color: var(--nav-button-text-color);
     border: none;
     border-radius: 10px;
     padding: 0.75rem 1.5rem;
-    /* set the cursor to pointer */
     cursor: pointer;
     font-size: 1.25rem;
     text-align: center;
-    /* set transition effect */
     transition: background-color 0.3s, color 0.3s;
 }
 
 .container button:hover {
-    background-color: white;
-    color: #007bff;
+    background-color: var(--nav-button-hover-bg-color);
+    color: var(--nav-button-hover-text-color);
     font-style: italic;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px var(--container-button-shadow);
 }
