--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -10,6 +10,13 @@
     {% block script %}{% endblock %}
 </head>
 <body>
+<div class="nav-bar">
+    <button type="button" class="nav-button" onclick="window.location.href = '/buyerManage'">Buyer Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/sellerManage'">Seller Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/buyerItemManage'">Purchased Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/itemManage'">Product Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/commentManage'">Comment Manage</button>
+</div>
 {% block body %}{% endblock %}
 </body>
 </html>
