--- a/templates/itemManage.html
+++ b/templates/itemManage.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Manage Item</title>
+{% extends "base_admin.html" %}
+
+{% block script %}
     <script src="/static/js/render_purchased_items.js"></script>
     <script>
         let purchased_item_box;
 
         window.onload = function (){
             purchased_item_box = $(".purchased-item-box");
-            render_purchased_items()
+            render_purchased_items();
         }
     </script>
-</head>
-<body>
+{% endblock %}
+
+{% block body %}
 <div class="purchased-item-box"></div>
-</body>
-</html>
+{% endblock %}
