--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                 }else if(type==="1") {
                     a.setAttribute("href", "/userInfo");
                     a.innerText = name;
-                    operation.setAttribute("href", "/buyerItemManage")
+                    operation.setAttribute("href", "/buyerItem")
                     operation.innerText = "My Item";
                 }else{
                     a.setAttribute("href", "/login");
