--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -11,8 +11,7 @@
 </head>
 <body>
 <div class="nav-bar">
-    <button type="button" class="nav-button" onclick="window.location.href = '/buyerManage'">Buyer Manage</button>
-    <button type="button" class="nav-button" onclick="window.location.href = '/sellerManage'">Seller Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/admin'">User Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/buyerItemManage'">Purchased Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/itemManage'">Product Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/commentManage'">Comment Manage</button>
