--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -5,7 +5,7 @@
     <title>Seller Manage</title>
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/render_user_info.js"></script>
-    <script src="/static/js/render_item.js"></script>
+    <script src="/js/render_items.js"></script>
     <script>
         window.onload = function (){
             get_and_render_user_info()
