--- a/templates/buyerItem.html
+++ b/templates/buyerItem.html
@@ -3,7 +3,9 @@
 {% block script %}
     <script src="/static/js/render_purchased_items.js"></script>
     <script>
+    let purchased_item_box
     $(document).on("sessionLoaded", function (){
+        purchased_item_box = $(".purchased-item-box")
         get_and_render_purchased_items()
     })
 
@@ -11,11 +13,15 @@
         $.ajax({
             url:"buyer/buyerItem",
             type:"get",
-            data:{phone: phone}
+            data:{phone: phone},
             success:function (data){
                 render_purchased_items(data)
             }
         })
     }
     </script>
+{% endblock %}
+
+{% block main %}
+    <div class="purchased-item-box"></div>
 {% endblock %}
