--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                 phone = data.phone;
                 type = data.type;
                 name = data.name;
-                {#light_mode = data.style;#}
+                {#light_mode = data.light_mode;#}
                 light_mode = true;
 
                 {#generate tag#}
@@ -63,7 +63,13 @@
                 })
                 page_style_button.onclick = function (){
                     light_mode = !light_mode;
-                    this.innerText = light_mode?"Light Mode":"Dark Mode";
+                    if (light_mode){
+                        this.innerText = "Light Mode";
+                        document.body.classList.toggle("");
+                    }else {
+                        this.innerText = "Dark Mode";
+                        document.body.classList.toggle('dark-mode');
+                    }
                 }
                 page_style_button.innerText = light_mode?"Light Mode":"Dark Mode";
                 if (type==="0"){
